# rust-hypervisor-firmware

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  Jenkinsfile  MAINTAINERS.md  README.md  aarch64-unknown-none.json  aarch64-unknown-none.ld  build.rs  fetch_disk_images.sh  layout.ld  make-test-disks.sh  riscv64gcv-unknown-none-elf.json  riscv64gcv-unknown-none-elf.ld  run_coreboot_integration_tests.sh  run_integration_tests.sh  rust-toolchain  rust-toolchain.toml  target.json  x86_64-unknown-none.json  x86_64-unknown-none.ld
.cargo/: config
.github/: dependabot.yml
.github/workflows/: build.yaml  docker-image.yaml  integration-windows.yaml  release.yaml  tests.yaml
resources/: Dockerfile
resources/cloud-init/clear/openstack/latest/: user_data
resources/cloud-init/ubuntu/: network-config
resources/coreboot/: qemu-q35-config.in
scripts/: dev_cli.sh  fetch_disk_images.sh  fetch_images.sh  make-test-disks.sh  run_cargo_tests.sh  run_coreboot_integration_tests.sh  run_integration_tests.sh  run_integration_tests_windows.sh  run_unit_tests.sh
src/: alloc.rs  block.rs  boot.rs  bootinfo.rs  bzimage.rs  cmos.rs  common.rs  coreboot.rs  delay.rs  efi.rs  fat.rs  fdt.rs  gdt.rs  integration.rs  layout.rs  loader.rs  logger.rs  main.rs  mem.rs  mmio.rs  paging.rs  part.rs  pci.rs  pe.rs  pvh.rs  rtc.rs  rtc_goldfish.rs  rtc_pl031.rs  serial.rs  uart_mmio.rs  uart_pl011.rs  virtio.rs
src/arch/: mod.rs
src/arch/aarch64/: asm.rs  layout.rs  mod.rs  paging.rs  ram64.s  simd.rs  translation.rs
src/arch/riscv64/: asm.rs  layout.rs  mod.rs  ram64.s
src/arch/x86_64/: asm.rs  gdt.rs  layout.rs  mod.rs  paging.rs  ram32.s  sse.rs  vmx.rs
src/asm/: gdt64.s  mod.rs  note.s  ram32.s  ram64.s  reset.s  rom16.s  rom32.s
src/efi/: alloc.rs  block.rs  boot_services.rs  console.rs  device_path.rs  file.rs  mem_file.rs  mod.rs  runtime_services.rs  var.rs
