[package]
name = "hypervisor-fw"
version = "0.3.2"
authors = ["Rob Bradford <robert.bradford@intel.com>"]
edition = "2018"

# Despite "panic-strategy": "abort" being set in target.json, panic = "abort" is
# needed here to make "cargo check" and "cargo clippy" run without errors.
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "thin"

[features]
default = ["log-serial", "log-panic"]
# Have the log! macro write to serial output. Disabling this significantly
# reduces code size, but makes debugging essentially impossible
log-serial = []
# Log panics to serial output. Disabling this (without disabling log-serial)
# gets you most of the code size reduction, without losing _all_ debugging.
log-panic = ["log-serial"]
integration_tests = []
coreboot = []
efi-var = []

[dependencies]
bitflags = "1.3.2"
x86_64 = "0.14.6"
atomic_refcell = "0.1.8"
r-efi = "4.0.0"
uart_16550 = "0.2.15"
linked_list_allocator = "0.9.0"

[dev-dependencies]
rand = "0.8.4"
ssh2 = "0.9.1"
tempfile = "3.2.0"
